<resources>
    <string name="app_name">Game Box</string>
    <string name="loading">Loading...</string>
    <string name="donate">Пожертвовать на развитие</string>
    <string name="tic_tac_toe">Крестики-нолики</string>
    <string name="timer_button">Останови время</string>
    <string name="turnOne">Ходит Крестик</string>
    <string name="turnTwo">Ходит Нолик</string>
    <string name="playerOneWin">Крестик выиграл</string>
    <string name="playerTwoWin">Нолик выиграл</string>
    <string name="restartButton">Перезапуск</string>
    <string name="drawGame">Ничья</string>
    <string name="back">Назад</string>
    <string name="soundPad">SoundPad</string>
    <string name="less">Меньше</string>
    <string name="more">Больше</string>
    <string name="equal">Верно!</string>
    <string name="guessTheGame">Угадай число</string>

    <string name="guess_my_number">Загадать свое число</string>
    <string name="guess_phone_number">Угадать число телефона</string>
    <string name="your_num">Ваше число: </string>
    <string name="less_num">Мое число меньше</string>
    <string name="big_num">Мое число больше</string>
    <string name="go_num">Какое число я загадал?</string>
    <string name="num_hint">Введите число</string>
    <string name="num_answer">Попробовать угадать</string>
    <string name="ask_text">Вы загадали число в пределах:</string>

    <string name="num_is_big">Мое число больше!</string>
    <string name="num_is_small">Мое число меньше!</string>
    <string name="num_is_true">Вы угадали!</string>

    <string name="end_guess1">Я устал! Ваше число</string>
    <string name="end_guess2">или</string>

    <string name="game_rules">Введите числа для начала игры</string>
    <string name="min_count">Минимальное значение</string>
    <string name="max_count">Максимальное значение</string>
    <string name="start_game">Начинаем!</string>

    <string name="negative_counts">Числа должны быть неодинаковыми, минимальное значение меньше максимального!</string>
    <string name="bad_start_guess">Заполните поля для старта!</string>
    <string name="start_guess_game">Все готово! Начинаем!</string>
    <string name="enter_the_number">Введите число!</string>

    <string name="win">Я выиграл! Ваше число: </string>
    <string name="end_guess_game">Победа! Возвращаемся назад...</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="timer_text">00:00:00</string>
    <string name="mission_text">Вам нужно остановить таймер на:</string>
    <string name="timer_ask_text">Нажмите на картинку, чтобы запустить / останосить таймер</string>

    <string name="user_auth">Вы успешно авторизировались</string>
    <string name="user_no_auth">Авторизируйтесь, чтобы увидеть ваш прогресс и сохранить его</string>
    <string name="auth">Войти с помощью</string>
    <string name="google_auth">Google-аккаунт</string>


    <string name="history">Статистика</string>
    <string name="languages">Изменить язык</string>
    <string name="logout">Выйти из аккаунта</string>

    <string name="select_language">Выберите язык приложения</string>
    <string name="rus_language">Русский язык</string>
    <string name="usa_language">Английский язык</string>
    <string name="select_language_ok">Выбрать язык</string>


    <string name="tic_tac_toe_stat">Статистика "Крестики-Нолики"</string>
    <string name="tic_tac_toe_total_games">Всего игр сыграно:</string>
    <string name="tic_tac_toe_cross_wins">Побед Крестиков:</string>
    <string name="tic_tac_toe_zero_wins">Побед Ноликов:</string>
    <string name="tic_tac_toe_draw_count">Количество ничейных:</string>

    <string name="timer_stat">Статистика "Останови время"</string>
    <string name="timer_total_games">Всего попыток остановить время:</string>
    <string name="timer_wins">Время успешно остановлено:</string>

    <string name="guess_num_stat">Статистика "Угадай число"</string>
    <string name="guess_num_phone_wins">Телефон угадал ваше число:</string>
    <string name="guess_num_user_wins">Вы угадали число:</string>
    <string name="loading_history_error">Ошибка загрузки истории</string>
</resources>