<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/select_language"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="52dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/russia" />

        <RadioButton
            android:id="@+id/rusLangButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rus_language"
            android:textColor="@color/white" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="52dp"
            android:layout_height="48dp"
            android:layout_marginStart="10dp"
            android:scaleType="fitStart"
            app:srcCompat="@drawable/united_states" />

        <RadioButton
            android:id="@+id/engLangButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/usa_language"
            android:textColor="@color/white" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/posSelectLangButton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/mainly_blue"
        android:text="@string/select_language_ok"
        android:textColor="@color/white"
        app:cornerRadius="15px"
        app:icon="@drawable/ok"
        app:iconSize="64px"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.471"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.56"
        app:rippleColor="@color/mainly_green" />

</LinearLayout>