<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/nightfall"
    tools:context="com.example.ticTacToeGame.Activity.GuessTheNumberActivity">


    <com.google.android.material.button.MaterialButton
        android:id="@+id/backButton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="310dp"
        android:layout_height="48dp"
        android:backgroundTint="@color/orange1"
        android:text="@string/back"
        android:textColor="@color/white"
        app:cornerRadius="15px"
        app:icon="@drawable/back"
        app:iconSize="64px"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.94"
        app:rippleColor="@color/orange1" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/equalButton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="174dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/lyght_green"
        android:text="@string/equal"
        android:textColor="@color/white"
        app:cornerRadius="15px"
        app:icon="@drawable/equal"
        app:iconSize="64px"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.706"
        app:rippleColor="@color/lyghter_green" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/moreButton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="174dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/lyght_green"
        android:text="@string/more"
        android:textColor="@color/white"
        app:cornerRadius="15px"
        app:icon="@drawable/more"
        app:iconSize="64px"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.932"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597"
        app:rippleColor="@color/lyghter_green" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/lessButton"
        style="@style/Widget.MaterialComponents.Button.Icon"
        android:layout_width="174dp"
        android:layout_height="50dp"
        android:backgroundTint="@color/lyght_green"
        android:text="@string/less"
        android:textColor="@color/white"
        app:cornerRadius="15px"
        app:icon="@drawable/less"
        app:iconSize="64px"
        app:iconTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.067"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.597"
        app:rippleColor="@color/lyghter_green" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="391dp"
        android:layout_height="262dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.234"
        app:srcCompat="@drawable/square" />

    <TextView
        android:id="@+id/gameText"
        android:layout_width="177dp"
        android:layout_height="86dp"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="65dp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299" />

    <TextView
        android:id="@+id/numText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/your_num"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.056" />
</androidx.constraintlayout.widget.ConstraintLayout>